fixed more spacing issues

--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -22,6 +22,7 @@ button:hover {
 
 #custom-power {
     padding-left: 4px;
+    padding-right: 2px;
 }
 
 #workspaces button {
